[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/characters/Cthulhu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="VisualShaderNodeColorConstant" id=11]
constant = Color( 0, 0.363281, 0.0652771, 1 )

[sub_resource type="VisualShader" id=12]
code = "shader_type canvas_item;



void vertex() {
// Salida:0

}

void fragment() {
// Color:2
	vec3 n_out2p0;
	float n_out2p1;
	n_out2p0 = vec3(0.000000,0.363281,0.065277);
	n_out2p1 = 1.000000;

// Salida:0
	COLOR.rgb = n_out2p0;
	COLOR.a = n_out2p1;

}

void light() {
// Salida:0

}
"
graph_offset = Vector2( 0, 114 )
mode = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 11 )
nodes/fragment/2/position = Vector2( 200, 160 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 2, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 48, 80 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 32, 80 )

[node name="Cthulhu" type="KinematicBody2D" groups=[
"cthulhu",
]]
position = Vector2( 536, 780 )
collision_mask = 3
collision/safe_margin = 0.3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 13 )
position = Vector2( 16, -48 )
scale = Vector2( 1.5, 2.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, -48 )
shape = SubResource( 16 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16, -48 )
shape = SubResource( 17 )
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_Area2D_area_shape_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
